<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.travelapp.data.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_card_profile"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:backgroundTint="@color/logo_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/profile_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:fontFamily="@font/sora_bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/profile_profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_person_24"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{"Hello, " + user.name}'
                    tools:text="Hello, Traveler"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/sora_bold"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textSize="14sp"
                    android:fontFamily="@font/sora_bold"
                    android:backgroundTint="@color/logo_blue_light"
                    android:paddingHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/name_box"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/top_card_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/android_image"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_android_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sora_regular"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/android_image"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    tools:text="Username"
                    android:text='@{user.name}'
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sora_bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/android_image"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phone_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/name_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/phone_image"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:src="@drawable/baseline_local_phone_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/telephone_number"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sora_regular"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                tools:text="0814206969420"
                android:text='@{user.phoneNumber}'
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sora_bold"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_image"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/phone_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/logout_image"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_logout_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textSize="18sp"
                android:textColor="@color/text_red"
                android:fontFamily="@font/sora_bold"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/logout_image"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>