<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.travelapp.data.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/logo_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white"
                    android:layout_margin="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profi"
                    android:fontFamily="@font/sora_bold"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_picture_layout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/edit_profile_image_shape"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/edit_profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_person_24"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:cardCornerRadius="40dp"
                    android:backgroundTint="@color/logo_blue"
                    android:layout_marginTop="-25dp"
                    android:layout_marginStart="-25dp"
                    app:layout_constraintStart_toEndOf="@id/edit_profile_image_shape"
                    app:layout_constraintTop_toBottomOf="@id/edit_profile_image_shape">

                    <ImageButton
                        android:id="@+id/profile_image_edit_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_add_24"
                        app:tint="@color/white"
                        android:backgroundTint="@color/logo_blue" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_profile_picture_to_make_your_account_more_personal"
                    android:textSize="14sp"
                    android:fontFamily="@font/sora_regular"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/edit_profile_image_shape" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_name_layout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:fontFamily="@font/sora_bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="Update your username by tapping the arrow above, you can still change your username after you've updated it."
                    android:textSize="16sp"
                    android:fontFamily="@font/sora_regular"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <EditText
                    android:id="@+id/username_display"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    tools:text="Username Name"
                    android:text='@{user.name}'
                    android:textSize="18sp"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/username_edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:background="@android:color/transparent"
                    app:tint="@color/logo_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_number_layout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="20sp"
                    android:fontFamily="@font/sora_bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="Update your Phone Number with the button above, remember that changing your Phone Number will change your login credentials."
                    android:textSize="16sp"
                    android:fontFamily="@font/sora_regular"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <EditText
                    android:id="@+id/number_display"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    tools:text="Number num num"
                    android:text='@{user.phoneNumber}'
                    android:textSize="18sp"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/number_edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:background="@android:color/transparent"
                    app:tint="@color/logo_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp"
            android:backgroundTint="@color/logo_blue"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:fontFamily="@font/sora_bold"
                android:backgroundTint="@color/logo_blue" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>